<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pkmnapps.eventsdtu.FilterActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="Filter by -"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed" />

    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/categories" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_marginStart="20dp"
            android:checkedButton="@id/allRadio">
            <RadioButton
                android:id="@+id/technicalRadio"
                android:text="@string/techincal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/culturalRadio"
                android:text="@string/cultural"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/allRadio"
                android:text="@string/all_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_below="@id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/time" />

        <CheckBox
            android:layout_marginStart="20dp"
            android:layout_below="@+id/textView2"
            android:id="@+id/checkBox_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today" />

        <CheckBox
            android:id="@+id/checkBox_this_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/checkBox_today"
            android:text="@string/this_week" />

        <CheckBox
            android:id="@+id/checkBox_this_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/checkBox_this_week"
            android:text="@string/this_month" />


    </RelativeLayout>
    <Button
        android:id="@+id/applyFilters"
        android:text="@string/apply_filters"
        android:textColor="@color/colorGrey"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
