<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pkmnapps.eventsdtu.EventActivity">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_black_24dp"/>
    <item
        android:id="@+id/action_pin"
        android:orderInCategory="100"
        android:title="@string/pin"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_star_white_24dp"/>
    <item
        android:id="@+id/action_reminder"
        android:orderInCategory="100"
        android:title="@string/set_reminder"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_notifications_black_24dp"/>
</menu>
