<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        tools:context="com.pkmnapps.eventsdtu.IntroActivity">
        <LinearLayout
            android:id="@+id/introLayout"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>


    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/skipButton"
            android:textColor="@color/colorPrimary"
            android:text="@string/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/backButton"
            android:visibility="invisible"
            android:textColor="@color/colorPrimary"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/nextButton"
            android:textColor="#ffffff"
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>

